# racs

./: CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  conf.yaml  config.yaml  main.c
.ci/: build-project.sh
.circleci/: config.yml
cmake/: FindBSD.cmake  FindEvent.cmake  FindFLAC.cmake  FindGuile.cmake  FindLame.cmake  FindMsgpack.cmake  FindOpus.cmake  FindOpusEnc.cmake  FindYaml.cmake  FindZstd.cmake
docs/: Doxyfile.in
docs/source/: build-from-source.rst  commands.rst  conf.py  extract.rst  format.rst  getting-started.rst  index.rst  open.rst  ping.rst  quick-start.rst  scheme.rst  streaming.rst  syntax.rst  types.rst
docs/source/_static/: custom.css
docs/source/bindings/: close.rst  create.rst  extract.rst  format.rst  index.rst  info.rst  open.rst  ping.rst
docs/source/commands/: close.rst  create.rst  eval.rst  extract.rst  format.rst  index.rst  open.rst  ping.rst  search.rst  shutdown.rst
licenses/: libopusenc-BSD-3.0.txt
scm/: extract.scm
src/: atsp.c  atsp.h  auxts.c  auxts.h  biquad.c  biquad.h  buffer.h  bytes.h  cache.c  cache.h  command.c  command.h  command_exec.c  command_exec.h  command_executor.c  command_executor.h  commands.c  commands.h  complex_t.h  config.h  conn.c  conn.h  context.c  context.h  crc32c.c  create.c  create.h  daw_ops.c  daw_ops.h  db.c  db.h  encode.c  encode.h  endian.h  exec.c  exec.h  executor.c  executor.h  export.h  extract.c  (+88 more)
src/dsp/: version.hpp
src/dsp/capi/: allocator.cpp  allocator.h  biquad.cpp  biquad.h
src/dsp/core/: allocator.cpp  allocator.hpp  bitcast.cpp  bitcast.hpp  broadcast.cpp  broadcast.hpp  delete.cpp  delete.hpp  generic.cpp  generic.hpp  op.hpp  put.cpp  put.hpp  reshape.cpp  reshape.hpp  shape.cpp  shape.hpp  slice.cpp  slice.hpp  tensor.cpp  tensor.hpp
src/dsp/dwt/: dwt.cpp  dwt.hpp  wavedec.cpp  wavedec.hpp  wavelet_coefficients.hpp  wavelets.cpp  wavelets.hpp
src/dsp/fft/: convolution.cpp  convolution.hpp  dct.cpp  dct.hpp  fft.cpp  fft.hpp
src/dsp/linalg/: dot.cpp  dot.hpp  norm.cpp  norm.hpp  transpose.cpp  transpose.hpp
src/dsp/math/: abs_floor.cpp  abs_floor.hpp  complex.cpp  complex.hpp  constants.hpp  cumprod.cpp  cumprod.hpp  cumsum.cpp  cumsum.hpp  exponential.cpp  exponential.hpp  hyperbolic.cpp  hyperbolic.hpp  logarithmic.cpp  logarithmic.hpp  polynomial.cpp  polynomial.hpp  prod.cpp  prod.hpp  sqrt.cpp  sqrt.hpp  sum.cpp  sum.hpp  trigonometric.cpp  trigonometric.hpp
src/dsp/runtime/: cpu_info.hpp  exceptions.cpp  exceptions.hpp  ref_counter.cpp  ref_counter.hpp  session.cpp  session.hpp  thread_pool.cpp  thread_pool.hpp
src/dsp/signal/: adsr.cpp  adsr.hpp  biquad.cpp  biquad.hpp  biquad_design.cpp  biquad_design.hpp  comb.cpp  comb.hpp  convolution.cpp  convolution.hpp  fir_design.cpp  fir_design.hpp  iir_design.cpp  iir_design.hpp  modulation.cpp  modulation.hpp  oscillator.cpp  oscillator.hpp  windows.cpp  windows.hpp
src/dsp/simd/: abs_floor.hpp  bessel.cpp  bessel.hpp  biquad.cpp  biquad.hpp  comb.hpp  complex.hpp  constants.hpp  convolution.hpp  cumprod.hpp  cumsum.hpp  dct.hpp  elu.hpp  envelope.hpp  exponential.hpp  fft.cpp  fft.hpp  generic.cpp  generic.hpp  hyperbolic.hpp  linalg.cpp  linalg.hpp  logarithmic.hpp  min_max.hpp  normal.cpp  normal.hpp  polyblep.cpp  polyblep.hpp  polynomial.hpp  relu.hpp  splitmix64.hpp  sqrt.hpp  trigonometric.hpp  waveforms.cpp  waveforms.hpp  xoshiro128.hpp
src/dsp/simd/arm64/neon/: abs_floor_neon_f32.cpp  abs_floor_neon_f32.hpp  bessel_neon_f32.cpp  bessel_neon_f32.hpp  biquad_neon_f32.cpp  biquad_neon_f32.hpp  comb_neon_f32.cpp  complex_neon_f32.cpp  complex_neon_f32.hpp  convolution_neon_f32.cpp  cumprod_neon_f32.cpp  cumsum_neon_f32.cpp  dct_neon_f32.cpp  elu_neon_f32.cpp  elu_neon_f32.hpp  envelope_neon_f32.cpp  exponential_neon_f32.cpp  exponential_neon_f32.hpp  fft_neon_f32.cpp  (+23 more)
src/dsp/special/: bessel.cpp  bessel.hpp
src/dsp/stats/: mean.cpp  mean.hpp  min_max.cpp  min_max.hpp  normal.cpp  normal.hpp  random.cpp  random.hpp  rms.cpp  rms.hpp  std.cpp  std.hpp  variance.cpp  variance.hpp
src/guile/: bind.h  bindings.c  bindings.h
src/simd/: convert.h  convert_neon.c  merge.h  merge_avx2.h  merge_neon.c  merge_neon.h  pcm_neon.c  pcm_simd.c  pcm_simd.h  scale.h  scale_neon.c  scale_neon.h  simd.h  simd_neon-i16.c  simd_neon-i32.c  simd_neon.h
storage/: CMakeLists.txt  main.c
storage/src/: cache.c  cache.h  endian.h  export.c  export.h  extract.c  extract.h  flac.c  flac.h  hashmap.c  hashmap.h  hashtable.c  hashtable.h  list.c  list.h  macro.h  memtable.c  memtable.h  murmur3.c  murmur3.h  murmurhash3.c  murmurhash3.h  rfc.c  rfc.h  timestamp.c  timestamp.h
storage/test/: cache_test.c  extract_test.c  extract_test.h  hashtable_test.c  hashtable_test.h  memtable_test.c  memtable_test.h  test_runner.h
test/: cache_test.c  cache_test.h  create_test.c  create_test.h  exec_test.c  exec_test.h  executor_test.c  executor_test.h  extract_test.c  extract_test.h  flac_test.c  flac_test.h  format_test.c  format_test.h  hashtable_test.c  hashtable_test.h  kvstore_test.h  memtable_test.c  memtable_test.h  metadata_test.c  metadata_test.h  murmur3_test.h  murmurhash3_test.c  murmurhash3_test.h  parser_test.c  parser_test.h  ping_test.c  ping_test.h  scm_test.c  scm_test.h  simd_test.c  simd_test.h  stream_test.c  stream_test.h  test_runner.h  test_utils.h  timestamp_test.c  timestamp_test.h  wav_test.c  wav_test.h
test/data/: data-1.pcm  data-10.pcm  data-11.pcm  data-12.pcm  data-13.pcm  data-14.pcm  data-15.pcm  data-16.pcm  data-17.pcm  data-18.pcm  data-19.pcm  data-2.flac  data-2.pcm  data-3.pcm  data-4.flac  data-4.pcm  data-5.pcm  data-6.pcm  data-7.pcm  data-8.pcm  data-9.pcm
tests/: command_executor_test.c  command_executor_test.h  executor_test.c  executor_test.h  extract_test.c  extract_test.h  kvstore_test.c  memtable_test.c  memtable_test.h  metadata_test.c  metadata_test.h  mmh3-128_test.c  mmh3-128_test.h  murmur3_test.c  murmur3_test.h  parser_test.c  parser_test.h  ping_test.c  ping_test.h  simd_test.c  simd_test.h  test_runner.h  test_utils.h
tests/data/: data-1.flac  data-3.flac
(+52 files in other folders)
